2007-08-16  J. Tang  <jtang@tresys.com>

	* apol's domain transition analysis has a new access filter dialog
	that mimics the rule search's class/perm selection.

2007-08-13  J. Tang  <jtang@tresys.com>

	* Fix error in libsefs when querying a filesystem or fcfile by
	range, but the fclist is not MLS.

2007-08-13  J. Mowery  <jmowery@tresys.com>

	* Added SWIG wrappers for libpolsearch.

2007-08-06  J. Tang  <jtang@tresys.com>

	* configure.ac: Tk is checked only if --enable-swig-tcl and
	--enable-gui are given.  Also, if tclconfig.sh is not found, then
	abort configuration.

	* apol/top.tcl: Fixed error where reading from an older .apol file
	(from SETools < 3.2) would cause a startup problem.

	* libapol/include/apol/domain-trans-analysis.h: Upon invalid
	transition, empty vectors are returned rather than NULL pointers.

2007-08-02  J. Mowery  <jmowery@tresys.com>

	* Split the flags for sesearch to allow searching each type
	  of terule separately (i.e. type_transition, type_member, 
	  type_change). These flags are now identical to those used by
	  sediff.

2007-08-02  J. Tang  <jtang@tresys.com>

	* Official release of SETools 3.3.

2007-08-02  J. Mowery  <jmowery@tresys.com>

	* Corrected sechecker module incomplete domain transitions
	  to once again return results for missing RBAC and user policy
	  for transitions that have sufficient type enforcement rules.

2007-07-27  J. Tang  <jtang@tresys.com>

	* Library jar files are now installed in
	$PREFIX/share/setools-<version>, with symlinks in
	$PREFIX/share/java.  They used to be placed in
	$PREFIX/lib/setools.

	* Added framework for CUnit tests for libseaudit.

2007-07-26  J. Tang  <jtang@tresys.com>

	* Updated all linker map and SWIG interface files to match
	exported library headers.

	* libseaudit/src/filter.c (seaudit_filter_set_match): Added
	ability to set strictness of libseaudit filters.  Be default,
	filters are not strict; this matches previous libseaudit behavior.